--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.android.support:cardview-v7:28.0.+'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
